<resources>
    <string name="app_name">tabs</string>
    <string name="tcu">TCU</string>
    <string name="cict">CICT</string>
    <string name="my_profile">My Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="motivated_by_the_urgency_of_need_to_serve_the_youth_of_growing_taguig_city_the_local_government_administration_came_up_with_ordinance_no_29_series_of_2004_an_ordinance_establishing_the_pamantasan_ng_taguig_and_appropriating_funds_thereof_this_was_an_offshoot_of_the_provisions_of_the_local_government_code_pamantasan_ng_taguig_was_renamed_taguig_city_university_pursuant_to_city_ordinance_no_13_series_of_2009_tcu_has_gone_through_development_problems_top_billed_by_the_very_basic_need_to_have_enough_buildings_for_two_years_despite_its_courage_the_university_hardly_manifested_physical_eloquence_in_sy_2006_2007_it_swiftly_took_off_the_organization_of_the_university_and_construction_of_the_tcu_main_building_commenced_meanwhile_undergraduate_classes_were_held_in_high_schools_and_elementary_campuses_in_taguig_lent_to_the_growing_management_of_tcu_in_2006_general_ricardo_papa_sr_memorial_high_school_offered_some_rooms_for_free_in_2007_rooms_expanded_to_taguig_elementary_school_sta_ana_district_1_and_em_s_elementary_school_signal_village_district_2_in_2008_2009_additional_undergraduate_classes_were_held_in_the_annex_school_of_general_ricardo_papa_sr_memorial_high_school_at_brgy_ususan_and_signal_village_elementary_school_annex_lack_of_classrooms_did_not_deter_the_holding_of_graduate_school_classes_the_graduate_program_in_master_of_arts_in_teaching_major_in_mathematics_filipino_english_and_social_sciences_were_lumped_together_as_a_common_major_it_paved_the_way_to_the_development_of_the_master_of_arts_in_educational_management_while_holding_classes_in_a_secluded_and_secured_room_at_sunshine_mall_taguig_school_year_2009_2010_reflected_the_metamorphosis_of_youthful_taguig_city_university_because_in_june_all_classes_from_undergraduate_to_graduate_programs_started_to_be_held_at_the_new_main_building_of_tcu_the_rest_became_part_of_history_on_tcu_s_first_year_of_operation_2006_2007_the_university_was_under_the_stewardship_of_the_vice_president_for_academic_affairs_tess_umali_the_organization_of_the_university_and_construction_of_the_tcu_main_building_were_the_highlights_of_this_period_in_2007_2010_the_first_tcu_president_was_vice_mayor_george_elias_during_his_term_the_construction_of_the_main_building_was_completed_and_curricular_offerings_were_expanded_from_2010_to_the_early_part_of_2011_tcu_was_under_the_reins_of_bro_rolando_dizon_who_became_instrumental_in_creating_four_schools_graduate_studies_education_arts_and_sciences_engineering_technology_and_computer_sciences_management_entrepreneurship_and_criminology_on_april_4_2011_mayor_ma_laarni_lani_l_cayetano_installed_atty_lutgardo_b_barbo_as_the_third_president_of_tcu_he_is_a_former_governor_of_eastern_samar_and_secretary_of_the_philippine_senate_he_was_president_of_the_philippine_normal_university_from_2006_to_2010">Motivated by the urgency of need to serve the youth of growing Taguig City, the Local Government Administration came up with Ordinance No. 29 Series of 2004, An Ordinance Establishing the Pamantasan ng Taguig and Appropriating Funds Thereof. This was an offshoot of the provisions of the Local Government Code. Pamantasan ng Taguig was renamed Taguig City University pursuant to City Ordinance No. 13, Series of 2009. TCU has gone through development problems — top billed by the very basic need to have enough buildings. For two years, despite its courage, the university hardly manifested physical eloquence. In SY 2006–2007, it swiftly took off: The organization of the university and construction of the TCU main building commenced. Meanwhile, undergraduate classes were held in high schools and elementary campuses in Taguig, lent to the growing management of TCU. In 2006, General Ricardo Papa Sr. Memorial High School offered some rooms for free. In 2007, rooms expanded to Taguig Elementary School, Sta. Ana-District 1, and Em\'s Elementary School, Signal Village-District 2. In 2008-2009, additional undergraduate classes were held in the annex school of General Ricardo Papa Sr. Memorial High School at Brgy. Ususan and Signal Village Elementary School (Annex). Lack of classrooms did not deter the holding of graduate school classes. The graduate program in Master of Arts in Teaching major in Mathematics, Filipino, English, and Social Sciences were lumped together as a common major. It paved the way to the development of the Master of Arts in Educational Management while holding classes in a secluded and secured room at Sunshine Mall Taguig. School year 2009-2010 reflected the metamorphosis of youthful Taguig City University, because in June all classes from undergraduate to graduate programs started to be held at the new main building of TCU; the rest became part of history. On TCU\'s first year of operation, 2006–2007, the university was under the stewardship of the vice president for Academic Affairs, Tess Umali. The organization of the university and construction of the TCU main building were the highlights of this period. In 2007–2010, the first TCU president was vice mayor George Elias. During his term, the construction of the main building was completed and curricular offerings were expanded. From 2010 to the early part of 2011, TCU was under the reins of Bro. Rolando Dizon, who became instrumental in creating four schools: Graduate Studies; Education, Arts and Sciences; Engineering, Technology and Computer Sciences; Management, Entrepreneurship, and Criminology. On April 4, 2011, Mayor Ma. Laarni Lani L. Cayetano installed Atty. Lutgardo B. Barbo as the third president of TCU. He is a former governor of Eastern Samar and secretary of the Philippine Senate. He was president of the Philippine Normal University from 2006 to 2010.</string>
    <string name="pamantasan_ng_lungsod_ng_taguig_plt_later_renamed_taguig_city_university_tcu_upon_conversion_of_the_municipality_of_taguig_to_cityhood_on_8_december_2004_was_established_through_ordinance_no_29_series_of_2004_enacted_6_september_2004_municipal_government_of_taguig_authored_by_councilor_aurelio_paulo_r_bartolome_with_councilors_marisse_balina_eron_and_allan_paul_c_cruz_as_co_sponsors">Pamantasan ng Lungsod ng Taguig (PLT), later renamed Taguig City University (TCU) upon conversion of the Municipality of Taguig to cityhood on 8 December 2004, was established through Ordinance No. 29,Series of 2004 (enacted 6 September 2004, Municipal Government of Taguig, authored by Councilor Aurelio Paulo R. Bartolome with councilors Marisse Balina-Eron and Allan Paul C. Cruz as co-sponsors).</string>
    <string name="todo">TODO</string>
    <string name="the_creation_of_a_department_of_information_and_communications_technology_dict_is_perceived_to_be_the_next_logical_step_pushed_by_various_organizations_and_sectors_in_response_to_other_government_initiatives_to_centralize_information_and_communications_technology_ict_related_initiatives_these_government_initiatives_started_in_2004_when_president_arroyo_issued_eo_269_which_created_the_commission_of_information_and_communications_technology_cict_composed_of_the_national_computer_center_the_telecommunications_office_and_other_offices_of_the_department_of_transportation_and_communications_dotc_with_the_national_telecommunications_commission_and_the_philippine_postal_corporation_as_attached_agencies_in_2011_president_aquino_issued_eo_47_which_reorganized_the_cict_into_the_information_communications_technology_office_which_is_under_the_supervision_of_the_department_of_science_and_technology_several_bills_have_been_filed_in_both_the_upper_and_lower_houses_of_congress_to_push_for_the_creation_of_the_department_of_information_and_communications_technology_dict_most_of_the_bills_filed_intend_to_effectively_reorganize_the_current_structure_of_the_department_of_transportation_and_communications_dotc_transferring_all_functions_and_powers_of_the_said_department_regarding_communications_to_the_dict_while_renaming_the_dotc_as_the_department_of_transportation_the_primary_objective_common_to_all_the_bills_is_to_create_a_department_which_will_exclusively_focus_on_issues_relating_to_ict_and_to_promote_utilization_of_ict_as_a_vital_tool_for_nation_building_and_economic_growth_that_is_government_enable_private_sector_led_citizen_centric_and_market_based">The creation of a Department of Information and Communications Technology (“DICT”) is perceived to be the next logical step pushed by various organizations and sectors in response to other government initiatives to centralize Information and Communications Technology (“ICT”) related initiatives. These government initiatives started in 2004, when President Arroyo issued EO 269 which created the Commission of Information and Communications Technology (“CICT”), composed of the National Computer Center, the Telecommunications Office, and other offices of the Department of Transportation and Communications (“DOTC”), with the National Telecommunications Commission, and the Philippine Postal Corporation as attached agencies. In 2011, President Aquino issued EO 47, which reorganized the CICT into the Information Communications Technology Office which is under the supervision of the Department of Science and Technology. Several bills have been filed in both the upper and lower houses of congress to push for the creation of the Department of Information and Communications Technology (“DICT”). Most of the bills filed intend to effectively reorganize the current structure of the Department of Transportation and Communications (“DOTC”), transferring all functions and powers of the said department regarding communications to the DICT while renaming the DOTC as the Department of Transportation. The primary objective common to all the bills is to create a department which will exclusively focus on issues relating to ICT and to promote utilization of ICT as “a vital tool for nation-building and economic growth that is government-enable, private sector-led, citizen-centric and market-based.”</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="last_name_title">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="first_name_title">First Name</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_title">Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_first_name">Enter your first Name</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
</resources>